cv-fixing-skills-alignment

--- a/website-global.css
+++ b/website-global.css
@@ -1,3 +1,8 @@
+/* Develpoment settings */
+* {
+  outline: 1px solid black;
+}
+
 /* css variables*/
 :root {
   --primary-color: #008080;
@@ -32,6 +37,7 @@ hr {
 
 * {
   box-sizing: border-box;
+
 }
 
 /* global components */
