--- a/website-index.css
+++ b/website-index.css
@@ -68,15 +68,16 @@ nav {
 
 .nestedlist__item {
   margin: 0 auto;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
 }
 
 .nestedlist__title {
-  display: flex;
-  margin-bottom: 0;
+  display: table-header-group;
+  text-align: center;
+}
+
+.nestedlist__detail{
+  display: table-cell;
 }
 
 @media (max-width: 750px) {
